Fix spacing in inspire intro

--- a/src_react/app/styl/inspire.styl
+++ b/src_react/app/styl/inspire.styl
@@ -39,12 +39,12 @@ cardMaxWidth = innerMaxWidthPx2
     letter-spacing: 1px
 
     & p
-      line-height: 32px
+      line-height: 36px
 
     @media screen and (max-width: mediaScreenMaxWidth2)
       font-size: fontSizeSmall
 
-    & .bold
+    & h3
       font-size: fontSizeLarge
       letter-spacing: 2.4px
 
